--- a/content2.html
+++ b/content2.html
@@ -278,6 +278,8 @@
             <div class="amorespecificname">
                 <h2 style="color: greenyellow; text-align: center">Fun Facts:</h2>
                 <p>- This essay was passed less than one minute before the deadline</p>
+                <br>
+                <p>- I have no ideas so this part is blank for now</p>
             </div>
         </div>
     </div>
