--- a/content2.html
+++ b/content2.html
@@ -134,6 +134,9 @@
                 display: table;
                 clear: both;
             }
+            #footerPlaceholder{
+                height: 90px;
+            }
             #footer{
                 position: fixed;
                 left: 0;
@@ -283,6 +286,7 @@
             </div>
         </div>
     </div>
+    <div id="footerPlaceholder" class="col-12"></div>
     <div id="footer">
         <a href="https://www.youtube.com/watch?v=DLzxrzFCyOs" class="col-4">Contact Us</a>
         <a href="https://www.youtube.com/watch?v=DLzxrzFCyOs" class="col-4">Share this Site</a>
